--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,30 +1,27 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI
+name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    #strategy:
-      #matrix:
-        #node-version: [14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-    - uses: actions/checkout@v3
-    - name: "Build images"
-      run: docker-compose up -d
-      
-  tests:
+    - uses: actions/checkout@v2
+
+    - name: Build and run Docker Compose
+      run: |
+        docker-compose up -d --build
+
+  test:
     needs: build
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3  
-    - name: "Unit Test"
-      run: docker-compose exec web npm test
+    - uses: actions/checkout@v2
+
+    - name: Run npm test
+      run: |
+        docker-compose exec -T app npm run test
+  
