--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,3 +16,11 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
       - run: npm test
+      - name: Check test status
+        run: |
+          if [ $? -eq 0 ]; then
+            echo "All tests passed"
+          else
+            echo "Tests failed"
+            exit 1
+          fi
