--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: '20.x'
       - run: npm install
       - run: npm run build --if-present
-      - run: npm test
+      - run: npm test -- --testPathPattern="tests/domain"
       - name: Check test status
         run: |
           if [ $? -eq 0 ]; then
