--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Debug Directory Contents
+        run: ls -l
 
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
