--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,11 +42,6 @@ jobs:
           args: >
             -Dsonar.organization=arianemadureira
             -Dsonar.projectKey=arianemadureira_web_cafeteria
-            -Dsonar.python.coverage.reportPaths=coverage.xml
-            -Dsonar.sources=lib/
-            -Dsonar.test.exclusions=tests/**
-            -Dsonar.tests=tests/
-            -Dsonar.verbose=true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -56,7 +51,7 @@ jobs:
              -X \
             -Dsonar.projectKey=arianemadureira_web_cafeteria \
             -Dsonar.sources=. \
-            -Dsonar.host.url=http://localhost:9000 \
+            -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=$SONAR_TOKEN
       - name: Check Quality Gate
         env: 
