--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,3 +61,17 @@ jobs:
            if [ "$QUALITY_GATE_STATUS" = "OK" ]; then
              echo "QG OK"
            fi
+  build:
+    runs-on: ubuntu-latest
+    needs: code-analysis
+    
+    steps:
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+            
+        - name: Start Docker Compose
+          run: |
+            docker-compose up -d
+          working-directory: ./docker-compose.yml
+        
