--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -72,6 +72,5 @@ jobs:
             
         - name: Start Docker Compose
           run: |
-            docker-compose up -d
-          working-directory: docker-compose.yml
+            docker-compose up -d --build
         
